css/portfolio_website.css
:root {
    --Grün : #6A9955;
    --Yellow : #F5D00E;
    --LightBlue: #A3D5FF;
    --Black : #161616;
    --White: #FFFFFF;
    --Gray: #666666;
}

body {
    margin: 0;
    background-color: var(--Black);
    position: relative;
    font-family: 'jetbrains mono', serif;
}

#Email-Logo {
    height: 66px;
    width: 66px;
}

#shape-corner {
    position: fixed;
    bottom: 0;
    right: 0;
    z-index: -1;
    opacity: 0.3;
}

div p, p {
    color: var(--White);
    font-size: clamp(12px, 3vw, 36px);
    padding: 0,5em;
}

.initials-logo {
    font-family: 'kapakana', serif;
    font-size: clamp(30px ,3vw ,60px);
}

.skills {
    width: 200px;
    height: auto;
}

.pic-right {
    display: flex;
    justify-content: flex-end;
}

.Damjano {
    position: relative;;
    width: 176px;
    height: 267px;
    padding: 1em;
    object-fit: cover;
}

.social-logo {
    width: 80px;
    height: 80px;
    object-fit: contain;
    transition: transform 0.3s ease;
}

.social-logo:hover {
    transform: scale(1.1);
}

.title-comment {
    color: var(--Grün);
}

.terminal-gif {
    position: relative;
    width: 1000px;
    height: auto;
    border-radius: 10px;
    box-shadow: 0 0 20px var(--Yellow);
    display: block;
    margin: 1em auto;
}

.project-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 20px;
    padding: 80px;
    align-items: stretch;
}

.card {
    background: #2a2a2a;
    border-radius: 8px;
    padding: 1.5rem;
    color: var(--White);
    display: flex;
    flex-direction: column;
    gap: 0.25rem;
    height: 100%;
    font-size: clamp(12px, 1.5vw, 24px);
    transition:  0.5s ease;
}

.card:hover {
    box-shadow: 0 0 20px var(--Yellow);
    transform: translateY(-8px);
}

.card img {
    width: 100%;
    border-radius: 4px;
}

.zip {
    max-width: 15%;
    object-fit: contain;
}

.download-bar {
    background: var(--Yellow);
    border-radius: 6px;
    padding: 10px 16px;
    color: #000;
    display: flex;
    align-items: center;
    justify-content: space-between;
    text-decoration: none;
    margin-top: auto;
    transition: transform 0.3s ease;
    box-sizing: border-box;
}

.download-bar:hover {
    transform: scale(1.05);
}

#background-icons {
    position: relative;
    bottom: 1rem;
    left: 1rem;
    width: 260px;
    height: 80px;
    background: var(--Gray);
    border-radius: 10px;
    margin: 1rem;
    margin-top: 2em;
}

.contact-cards {
    background-color: var(--Gray);
    color: var(--White);
    margin: 1em 2.75em;
    padding: 1em;
    border-radius: 20px;
    display: flex;
    align-items: center;
    gap: 2rem;
    font-size: clamp(10px, 2vw, 24px);
    transition: transform 0.3s ease;
}

.contact-cards:hover {
    transform: scale(1.02);
    box-shadow: 0 0 20px var(--Yellow);
}

.contact-cards a {
    color: var(--LightBlue)
}

.contact-img {
    width: 100px;
    height: auto;
    flex-shrink: 0;
}

.active-home, .active-about, .active-projects, .active-contact {
    color: var(--Yellow);
}

.nav-mitte {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 3rem;
    width: 100%;
}

.nav-mitte a {
    display: flex;
    align-items: center;
}

.language-selector {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    align-self: center;
    height: auto;
    line-height: 1;
    padding: 0;
    margin: 0;
    white-space: nowrap;
    opacity: 0;
}

.language-selector span.lang-active {
    color: var(--Yellow);
}

.lang {
    transition: transform 0.3s ease;
}

.lang:hover {
    transform: scale(1.3);
}
#lang-active {
    color: var(--Yellow);
}

nav a {
    text-decoration: none;
    color: var(--White);
    font-size: clamp(12px ,2vw, 30px);
    transition: color 0.3s ease, transform 0.3s ease;
    display: inline-block;
}

.nav-mitte a::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 2px;
    background: var(--Yellow);
    transform: scaleX(0);
    transform-origin: left;
    transition: transform 0.3s ease;
    border-radius: 2px;
}

.nav-mitte a:hover {
    color: var(--Yellow);
    transform: scale(1.07);
}

.nav-mitte a:hover::after {
    transform: scaleX(1);
}

nav {
    display: grid;
    grid-template-columns: auto 1fr auto;
    align-items: center;
    padding: 2em;
    min-height: 40px;
}

h1 {
    color: var(--White);
    padding: 0.5em;
    font-size: clamp(1.5em, 3vw, 3.125em);
}

h3 {
    color: var(--Grün);
    padding: 0.5em;
    font-size: clamp(1em, 3vw, 2em);
}

div p.whoami {
    font-size: clamp(1em, 3vw, 2em);
    margin-left: 0.5em;
}

@font-face {
  font-family: 'kapakana';
  src: url('../Kapakana-VariableFont_wght.ttf');
}
@font-face {
    font-family: jetbrains mono;
    src: url(../JetBrainsMono-VariableFont_wght.ttf);
}

@media (max-width: 1000px) {
    .project-container {
        grid-template-columns: 1fr;
        gap: 4em;
    }
    .card p {
        font-size: clamp(12px, 2vw, 20px);
    }
    .zip {
        max-width: clamp(10%, 3vw ,20%);
    }
    .terminal-gif {
        width: clamp(400px, 50vw, 1000px);
    }
    .pic-right {
        flex-direction: column-reverse;
        align-items: center;
    }
    .nav-mitte {
        gap: 1em;
        flex-wrap: nowrap;
    }
    .language-selector {
        top: 3.3em;
    }
    nav {
        flex-wrap: wrap;
        gap: 1rem;
        justify-content: center;
        padding: 1em;
    }
    .language-selector {
        position: static;
        margin-left: auto;
    }
}

